--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -75,7 +75,7 @@
 			<div class = "imagewrapper" style="height: 360px;">
 				<div class = "loader">
 					<div class = "imagebox"><img src = "samples/chickendance.gif" style = "height: 360px; width: auto;" alt = "Wrong alternative text example"></div>
-					<img src = "samples/cc.gif" style="opacity: 50%; height: 360px; width: auto;">
+					<img src = "samples/cc.png" style="opacity: 100%; height: 360px; width: auto;">
 					</div>
 			</div>
 			</br>
