--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -86,13 +86,13 @@
 		<div class = "popUpWrapper" style = "opacity: 0; top: 40px; min-height: calc(100% - 40px);">
 		</div>
 		<div class = "sidebarArea">
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="5"> Naver </button>
-			<button onclick="location.href='https://coinse.github.io'" class = "p1sbb" tabIndex="4"> Coinse Lab </button>
-			<button onclick="location.href='https://bioeng.kaist.ac.kr/'" class = "p1sbb" tabIndex="16"> KAIST BBE </button>
-			<button onclick="location.href='https://cs.kaist.ac.kr/'" class = "p1sbb" tabIndex="7"> KAIST CS </button>
-			<button onclick="location.href='https://ee.kaist.ac.kr/'" class = "p1sbb" tabIndex="11"> KAIST EE </button>
-			<button onclick="location.href='https://github.com'" class = "p1sbb" tabIndex="9"> Github </button>
-			<button onclick="location.href='https://www.stackoverflow.com/'" class = "p1sbb" tabIndex="10"> Stack Overflow </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="5" style = "background-color: #03C75A"> <img src = "samples/Naver.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://coinse.github.io'" class = "p1sbb" tabIndex="4"> <img src = "samples/Coinse_Lab.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://bioeng.kaist.ac.kr/'" class = "p1sbb" tabIndex="16"> <img src = "samples/KAIST_BBE.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://cs.kaist.ac.kr/'" class = "p1sbb" tabIndex="7"> <img src = "samples/KAIST_CS.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://ee.kaist.ac.kr/'" class = "p1sbb" tabIndex="11"> <img src = "samples/KAIST_EE.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://github.com'" class = "p1sbb" tabIndex="9"> <img src = "samples/Github.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://www.stackoverflow.com/'" class = "p1sbb" tabIndex="10"> <img src = "samples/Stack_Overflow.png" style = "height: 100%; width: auto;"> </button>
 		</div>
 		<div class = "coloredText4">
 			
@@ -120,13 +120,13 @@
 
 		</div>
 		<div class = "sidebarArea">
-			<button onclick="location.href='https://x.com'" class = "p1sbb" tabIndex="13"> X (Previously Twitter) </button>
-			<button onclick="location.href='https://www.wolframalpha.com'" class = "p1sbb" tabIndex="17"> Wolfram alpha </button>
-			<button onclick="location.href='https://chat.openai.com'" class = "p1sbb" tabIndex="8"> ChatGPT </button>
-			<button onclick="location.href='https://www.facebook.com'" class = "p1sbb" tabIndex="14"> Facebook </button>
-			<button onclick="location.href='https://www.instagram.com/'" class = "p1sbb" tabIndex="15"> Instagram </button>
+			<button onclick="location.href='https://x.com'" class = "p1sbb" tabIndex="13" style = "background-color: #000000"> <img src = "samples/twitter.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://www.wolframalpha.com'" class = "p1sbb" tabIndex="17"> <img src = "samples/wolframalpha.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://chat.openai.com'" class = "p1sbb" tabIndex="8" style = "background-color: #74AA9C"> <img src = "samples/ChatGPT.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://www.facebook.com'" class = "p1sbb" tabIndex="14" style = "background-color: #0866FF"> <img src = "samples/facebook.png" style = "height: 100%; width: auto;"> </button>
+			<button onclick="location.href='https://www.instagram.com/'" class = "p1sbb" tabIndex="15"> <img src = "samples/instagram.png" style = "height: 100%; width: auto;"> </button>
 			<button onclick="location.href='index.html'" class = "p1sbb" tabIndex="6"> Please Do Not Access </button>
-			<button onclick="location.href='https://www.Youtube.com'" class = "p1sbb" tabIndex="12"> Youtube </button>
+			<button onclick="location.href='https://www.Youtube.com'" class = "p1sbb" tabIndex="12"> <img src = "samples/youtube.png" style = "height: 100%; width: auto;"> </button>
 		</div>
 	</div>
 		<div style = "margin: 30 100 0 100;">
