add problem2, robots.txt and 404 page

--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -119,7 +119,7 @@
 				<!--<h3>Importance of Unstyled HTML</h3>-->
 				<div id = "mixed3" class = "p3childpar">
 					<!--<h3>Importance of HTML structures</h3>-->
-					To circumvent potential challenges related to the </br>
+					</br>To circumvent potential challenges related to the </br>
 					reading order, developers should adhere to best </br>
 					practices in structuring HTML content. Employing </br>
 					semantic HTML elements, such as headings (&lt;h1&gt;, </br>
@@ -154,7 +154,7 @@
 				
 				<div id = "mixed4" class = "p3childpar">
 					<!--<h3>Importance of Webpage Testing</h3>-->
-					Moreover, it is imperative to test webpages across </br>
+					</br>Moreover, it is imperative to test webpages across </br>
 					various screen readers to ensure a consistent and </br>
 					accessible user experience. By doing so, developers </br>
 					can identify and rectify any discrepancies in how </br>
@@ -163,18 +163,18 @@
 				</div>
 				
 				<div id = "mixed2" class = "p3childpar">
-					Understanding the nuances of how screen readers </br>
+					</br>Understanding the nuances of how screen readers </br>
 					interpret CSS styling is paramount. Although some </br>
 					screen readers can extract meaning from CSS, </br>
 					ensuring a reliable and universally accessible </br>
 					experience necessitates an HTML structure that </br>
 					inherently conveys content hierarchy. This is </br>
 					particularly important for users who heavily </br>
-					rely on a plain HTML to get the information.
+					rely on a plain HTML to get the information.</br>
 				</div>
 				<!--<h3>Summary</h3>-->
 				<div id = "mixed5" class = "p3childpar">
-					In summary, while some screen readers excel in </br>
+					</br>In summary, while some screen readers excel in </br>
 					interpreting CSS styling, it is crucial to </br>
 					prioritize a robust and well-organized HTML </br>
 					structure. Aligning the HTML layout with the </br>
@@ -184,7 +184,7 @@
 					should continually refine and test their HTML </br>
 					structures to guarantee an inclusive digital </br>
 					experience across a spectrum of assistive </br>
-					technologies.</br>
+					technologies.</br></br>
 				</div>
 			</div>
 			<div class = "horizontalBar"></div>
