Modify problem 4 images

--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -106,7 +106,7 @@
 
 			<h3>1. Loss of Context</h3>
 			Imagine navigating a webpage filled with images that lack proper alt text like below. 
-			<img src="samples/4_1.png" alt="This is an image." width="400px"></br>
+			<img src="samples/4_1.jpg" alt="This is an image." width="200px"></br>
 			Users with visual impairments are left in the dark, missing out on essential context and information conveyed through those images. This can be especially problematic when images serve as links, buttons, or convey critical content integral to the understanding of the page.
 			
 			<h3>2. Navigational Hurdles</h3>
@@ -130,7 +130,7 @@
 			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.	
 			</br>
 			<a href="Congratulations.html" height="5" width="10">
-				<img src="samples/4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
+				<img src="samples/4_3.jpg" alt="Image of three golden retrievers on the grass" width="400px">
 			</a>
 
 			<div style="background-image: url(samples/4_4.jpg);" title="background image">
