--- a/Webpage/404.html
+++ b/Webpage/404.html
@@ -31,7 +31,7 @@
 
 	function lowvision(){
 		if (lv.className == "top"){
-			document.body.setAttribute("style", "-webkit-filter: blur(3px) ;background: #C40");
+			document.body.setAttribute("style", "-webkit-filter: blur(2px) ;background: #C40");
 			//document.querySelector(".topBar").setAttribute("style", "-webkit-filter: grayscale(0%);");
 			//document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
 			var sth = document.querySelector(".top-selected");
@@ -66,16 +66,16 @@
 	  <div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	  <div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h1 class = "coloredText1">PleaseDoNotAccess.io</h1>
+	<a href="index.html" title="Main page" style = "text-decoration: none;"><div class = "coloredText1">PleaseDoNotAccess.io</h1></a>
 	<div style = "width: 100%; height: auto;">
-		<div class = "whitext">
-			404 Error
+		<div class = "whitext" style = "font-size: 70px;">
+			404 Error!
 		</div>
 	</div>
-	<div style = "margin: 30 100 0 100;">
+	<!--div style = "margin: 30 100 0 100;">
 		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
 			<div class = "indexbutton"> Start </div>
 		<div>
-	</div>
+	</div-->
   </body>
 </html>
