--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -92,18 +92,26 @@
 			Web accessibility refers to efforts and principles aimed at enabling equal access 
 			to digital technology and content for all users. This goal encompasses providing 
 			easy access not only for people with disabilities but also for the elderly and those without disabilities.
- 			</br>
+ 			</div>
+		<div class = "coloredText00">
+			<p>
 			To achieve web accessibility, there are several key principles:
- 			</br>
+			</div>
+		<div class = "coloredText01">
+			<p>
 			First, there should be alternative options for all content.
 			It means that, all contents should be substitutable with text or other forms are needed. 
 			For example, providing alternative text for images or text descriptions for video or 
 			audio content allows users with visual or auditory impairments to access information.
- 			</br>
+ 			</div>
+		<div class = "coloredText02">
+			<p>
 			Second, user interface elements should be clear and predictable. Elements such as buttons 
 			or links should operate consistently and be designed to behave as users expect, enabling 
 			easy navigation and use of functions.
-			</br>
+			</div>
+		<div class = "coloredText04">
+			<p>
 			Third, the content should be provided clearly so that users can read, understand and utilize it effectively.
 			For instance, even if there is only text on the screen, the colors on the screen seen by people with color 
 			blindness and those without color blindness can be significantly different.
@@ -111,11 +119,12 @@
 			for individuals with visual impairments. It's essential to meet at least the minimum color contrast 
 			standards as per WCAG AA guidelines. In addition, paying attention to the <b>arrangement of letters 
 			and the form of paragraphs</b> not only improves the page aesthetically but also increases the readability of the content.
-			
- 			</br>
+ 			</div>
+		<div class = "coloredText03">
+			<p>
 			These accessibility principles allow the web to be tailored to accommodate the 
 			diverse ways in which users access and interact with it.
- 			</br>
+ 			</div>
 			<!--/br>
 			Considerations for web accessibility include:
  			</br>
@@ -159,6 +168,7 @@
 			<span>3. Using appropriate color contrasts for easy differentiation, employing readable fonts, and increasing font sizes are all examples of efforts toward web accessibility. </span></br>
 			<span>4. Alternative text for images, videos, and content is used to provide additional information of the content. </span></br>
 			</p>
+		</div>
 		</div>
 		
 	</div>
