--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -160,6 +160,7 @@
 
 			</p>
 			<div class = "horizontalBar"></div>
+		<div class = "coloredText05">
 			<p>
 			Question: Which of the following is the most appropriate explanation for the term 'Web Accessibility"? </br>
 			(Hint: When it's too hard to read the text, use the "color blind" filter.) </br>
