--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -106,7 +106,7 @@
 
 			<h3>1. Loss of Context</h3>
 			Imagine navigating a webpage filled with images that lack proper alt text like below. 
-			<img src="samples/4_1.jpg" alt="This is an image." width="200px"></br>
+			</br><img src="samples/4_1.jpg" alt="This is an image." width="200px"></br>
 			Users with visual impairments are left in the dark, missing out on essential context and information conveyed through those images. This can be especially problematic when images serve as links, buttons, or convey critical content integral to the understanding of the page.
 			
 			<h3>2. Navigational Hurdles</h3>
