--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -86,29 +86,33 @@
 	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
 	<h2 style = "font-size: 30px">Problem 2</h2>
-	<div style = "width: 100%; height: auto;">
+	<div style = "display: inline-block; width: 60%; height: auto;">
 		<div class = "coloredText3">
 			<p>
 			Web accessibility refers to efforts and principles aimed at enabling equal access 
 			to digital technology and content for all users. This goal encompasses providing 
-			easy access not only for people with disabilities but also for the elderly and those without disabilities.
- 			</div>
+			easy access not only for people with disabilities but also for the elderly and those without disabilities
+			</p>
+ 		</div>
 		<div class = "coloredText00">
 			<p>
 			To achieve web accessibility, there are several key principles:
-			</div>
+			</p>
+		</div>
 		<div class = "coloredText01">
 			<p>
 			First, there should be alternative options for all content.
 			It means that, all contents should be substitutable with text or other forms are needed. 
 			For example, providing alternative text for images or text descriptions for video or 
 			audio content allows users with visual or auditory impairments to access information.
- 			</div>
+			</p>
+ 		</div>
 		<div class = "coloredText02">
 			<p>
 			Second, user interface elements should be clear and predictable. Elements such as buttons 
 			or links should operate consistently and be designed to behave as users expect, enabling 
 			easy navigation and use of functions.
+			</p>
 			</div>
 		<div class = "coloredText04">
 			<p>
@@ -119,11 +123,13 @@
 			for individuals with visual impairments. It's essential to meet at least the minimum color contrast 
 			standards as per WCAG AA guidelines. In addition, paying attention to the <b>arrangement of letters 
 			and the form of paragraphs</b> not only improves the page aesthetically but also increases the readability of the content.
+			</p>
  			</div>
 		<div class = "coloredText03">
 			<p>
 			These accessibility principles allow the web to be tailored to accommodate the 
 			diverse ways in which users access and interact with it.
+			</p>
  			</div>
 			<!--/br>
 			Considerations for web accessibility include:
