--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -133,10 +133,9 @@
 				<img src="samples/4_3.jpg" alt="Image of three golden retrievers on the grass" width="400px">
 			</a>
 
-			<div style="background-image: url(samples/4_4.jpg);" title="background image">
 			<h3>2. Decorative Image Handling</h3>
-			Use empty or null alt text for decorative images to signal to screen readers that these images don't convey meaningful content. This paragraph is an example of misuse of decorative image which has 'title' attribute in its tag.
-			</div>
+			Use empty or null alt text for decorative images to signal to screen readers that these images don't convey meaningful content. The image below is an example of misuse of decorative image which has alt attribute in its tag.
+			</br><img src="samples/4_4.jpg" alt="Banner image for welcoming visitors" width="100%"></br>
 			
 			<h3>3. Automated Tools and Validators</h3>
 			Employ accessibility tools and validators during the development phase to identify missing or inaccurate alt text and address issues promptly.
