--- a/ChromeExtension/PopupDetector/popup.html
+++ b/ChromeExtension/PopupDetector/popup.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <button id="doFind"> Let's find popups </button>
+<!--audio id="audio" src="srcs/beep-06.mp3"></audio-->
 <script src="popup.js"></script>
 </body>
 </html>
