--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -101,7 +101,7 @@
 			<div style = "width: 100%;">
 				<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
 				<div id = "title" class = "p3childpar">
-					<b>To answer the question below, please listen to the screen reader result above.</b>
+					<b>To answer the question below, please listen to the screen reader audio above.</br>The recording is from commonly used screen reader <a href="https://www.freedomscientific.com/products/software/jaws/" title="">JAWS</a>.</b>
 				</div>
 				<!--<h3>Challenges in Screen Reading</h3>-->
 				<div id = "mixed1" class = "p3childpar">
