Modify problem title

--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -85,7 +85,7 @@
 	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h2 style = "font-size: 30px">Problem 2</h2>
+	<div style = "font-size: 40px"><b>Problem 2</b></div>
 	<div style = "display: inline-block; width: 60%; height: auto;">
 		<div class = "coloredText3">
 			<p>
