--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -94,7 +94,7 @@
 	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h2 style = "font-size: 30px">Problem 3</h2>
+	<div style = "font-size: 40px"><b>Problem 3</b></div>
 	<div style = "width: 100%; height: auto;">
 		
 		<div class = "coloredText5">
