--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -81,7 +81,7 @@
 	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h2 style = "font-size: 30px">Problem 1</h2>
+	<div style = "font-size: 40px"><b>Problem 1</b></div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "popUpWrapper" style = "opacity: 0; top: 40px; min-height: calc(100% - 40px);">
 		</div>
