--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -91,7 +91,7 @@
 	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h2 style = "font-size: 30px">Problem 4</h2>
+	<div style = "font-size: 40px"><b>Problem 4</b></div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText5">
 			<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
