--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -96,7 +96,7 @@
 		<div class = "coloredText5">
 			<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
 			<div>
-				<b>To answer the question below, please read this page along with the screen reading audio above.</br>The recording is from commonly used screen reader <a href="https://www.freedomscientific.com/products/software/jaws/" title="">JAWS</a>.</b>
+				<b>To answer the question below, please read this page along with the screen reading audio above.</br>The recording is from commonly used screen reader <a href="https://support.microsoft.com/en-us/windows/complete-guide-to-narrator-e4397a0d-ef4f-b386-d8ae-c172f109bdb1" title="">Narrator</a> in Windows.</b>
 			</div>
 			<h1>Unveiling the Web Accessibility Challenge: Missing or Inaccurate Alt Text</h1>
 
