--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -69,6 +69,10 @@
 	<div class = "coloredText1">PleaseDoNotAccess.io</div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "whitext">
+			<u>Warning: This website exhibits poor web accessibility, including the <b>absence of a mobile web page.</b>
+			Mobile users are encouraged to access this site from a desktop (PC) environment.</u>
+			</br>
+			</br>
 			Hello? Welcome to <span style="color: #00FFFF; text-decoration: underline">PleaseDoNotAccess.io</span>. This project was created to enhance people's understanding
 			about web accessibility. We specifically aim to provide you with an opportunity to consider 
 			web accessibility from the perspective of visually impaired individuals.
