--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -99,7 +99,7 @@
 		
 		<div class = "coloredText5">
 			<div style = "width: 100%;">
-				<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
+				<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/problem_3.mp3" type="audio/mp3"></audio>
 				<div id = "title" class = "p3childpar">
 					<b>To answer the question below, please listen to the screen reader audio above.</br>The recording is from commonly used screen reader <a href="https://support.microsoft.com/en-us/windows/complete-guide-to-narrator-e4397a0d-ef4f-b386-d8ae-c172f109bdb1" title="">Narrator</a> in Windows.</b>
 				</div>
