--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -94,7 +94,7 @@
 	<div style = "font-size: 40px"><b>Problem 4</b></div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText5">
-			<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/Howdy.mp3" type="audio/mp3"></audio>
+			<audio controls style="width=250px; margin-bottom: 30px"><source src="samples/problem_4.mp3" type="audio/mp3"></audio>
 			<div>
 				<b>To answer the question below, please read this page along with the screen reading audio above.</br>The recording is from commonly used screen reader <a href="https://support.microsoft.com/en-us/windows/complete-guide-to-narrator-e4397a0d-ef4f-b386-d8ae-c172f109bdb1" title="">Narrator</a> in Windows.</b>
 			</div>
