--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -113,7 +113,7 @@
 			
 			<h3>2. Navigational Hurdles</h3>
 			For users heavily reliant on screen readers, navigating a site becomes akin to solving a puzzle with missing pieces when it does not has appropriate form. Without accurate descriptions, users may struggle to comprehend the purpose of links, leading to confusion about the page's structure and content flow.
-			For exmple, we can make a better link like "Check <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">an article about web accessibility improvement</a>" instead of just "Click <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">here</a>" or <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/</a> to provide more information to screen readers.
+			For example, we can make a better link like "Check <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">an article about web accessibility improvement</a>" instead of just "Click <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">here</a>" or <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/</a> to provide more information to screen readers.
 			Similarily, a text which looks like <u class = "pseudoa">a link</u> is also problematic.
 			
 			<h3>3. Exclusion from Multimedia Content</h3>
