modify minor errors

--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -74,7 +74,7 @@
 			</br>
 			<div class = "imagewrapper" style="height: 360px;">
 				<div class = "loader">
-					<div class = "imagebox"><img src = "samples/chickendance.gif" style = "height: 360px; width: auto;" alt = "Wrong alternative text example"></div>
+					<div class = "imagebox"><img src = "samples/chickendance.gif" style = "height: 360px; width: auto;" alt = "A gif image of a person dancing while hanging fried chickens on his hand"></div>
 					<img src = "samples/cc.png" style="opacity: 100%; height: 360px; width: auto;">
 					</div>
 			</div>
@@ -99,7 +99,7 @@
 			</br>
 			</br>
 			</br>
-			<a href="index.html" title="Main page" style = "text-decoration: none;"><div style = "font-size: 70px;	font-weight: 700;">PleaseDoNotAccess.io</div></a>
+			<a href="index.html" title="Move to Please Do Not Access.io main page" style = "text-decoration: none;"><div style = "font-size: 70px;	font-weight: 700;">PleaseDoNotAccess.io</div></a>
 		</div>
 	</div>
 	<div style = "margin: 100 100 0 100;">
