--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -95,7 +95,7 @@
 			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="Web Accessibility Initiative" target="_blank">Web Accessibility Initiative</a>
 			</br>
 			</br>
-			Thank you for your participation.
+			Thank you for your participation. If you are interest in sharing experience, we recommend you to take part in our simple <a href="poll.html">survey</a>.
 			</br>
 			</br>
 			</br>
